--- a/views/index.jade
+++ b/views/index.jade
@@ -1,2 +1,6 @@
 extends layout
 
+block content
+  h1 Demo Cloud SDK - Payment Form
+  p.text-muted.text-center.mb-4 Complete el formulario para enviar una solicitud de pago
+
