--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,16 +9,16 @@ html
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js")
   body(class="p-3 m-0 border-0 bd-example m-0 border-0")
     div(class="container-fluid")
-      form(action='/payment',method='post', class='class="mb-3')
+      form(action='/payment',method='post', class="mb-3")
         div(data-role='fieldcontain' )
-          fieldset(data-role='controlgroup',class='class="mb-3')
+          fieldset(data-role='controlgroup',class="mb-3")
             label(for='serial-number',class="form-label") Serial Number
             input(id='serial-number',type='text',value='',placeholder='TERM1TEST',name='serial-number', class="form-control")
-        div(data-role='fieldcontain', class='class="mb-3')
-          fieldset(data-role='controlgroup', class='class="mb-3')
+        div(data-role='fieldcontain', class="mb-3")
+          fieldset(data-role='controlgroup', class="mb-3")
             label(for='amount', class="form-label") Amount
             input(id='amount',type='text',value='',placeholder='',name='amount',class="form-control")
-        div(data-role='fieldcontain', class='class="mb-3')
+        div(data-role='fieldcontain', class="mb-3")
           fieldset(data-role='controlgroup')
             label(for='tip', class="form-label") Tip
             input(id='tip',type='text',value='',placeholder='',name='tip',class="form-control")
